policies/container-using-read-write-root-filesystem.yaml
apiVersion: config.stackrox.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: container-using-read-write-root-filesystem
spec:
  categories:
  - Docker CIS
  - Privileges
  criteriaLocked: true
  description: Alert on deployments with containers with read-write root filesystem
  enforcementActions: []
  eventSource: NOT_APPLICABLE
  exclusions:
  - name: Don't alert on kube-system namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: kube-system
        label: null
    image: null
    expiration: null
  - name: Don't alert on istio-system namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: istio-system
        label: null
    image: null
    expiration: null
  - name: Don't alert on openshift-node namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: openshift-node
        label: null
    image: null
    expiration: null
  - name: Don't alert on openshift-sdn namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: openshift-sdn
        label: null
    image: null
    expiration: null
  isDefault: false
  lifecycleStages:
  - DEPLOY
  mitreAttackVectors: []
  mitreVectorsLocked: true
  policyName: GitOps - Container using read-write root filesystem
  policySections:
  - sectionName: ''
    policyGroups:
    - fieldName: Read-Only Root Filesystem
      booleanOperator: OR
      negate: false
      values:
      - value: 'false'
  rationale: Containers running with read-write root filesystem represent greater
    post-exploitation risk by allowing an attacker to modify important files in the
    container.
  remediation: Use a read-only root filesystem, and use volume mounts to allow writes
    to specific sub-directories depending on your application's needs.
  scope: []
  severity: MEDIUM_SEVERITY
  disabled: true
